--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,11 +9,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Ecommerceapp">
+        <activity android:name=".RegisterActivity"></activity>
         <activity
             android:name=".ui.login.LoginActivity"
             android:label="@string/title_activity_login" />
         <activity android:name=".SplashActivity" />
-        <activity android:name=".CustomLoginActivity" >
+        <activity android:name=".CustomLoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
