--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Ecommerceapp">
-        <activity android:name=".SerttingsActivity"></activity>
+        <activity android:name=".SettingsActivity"></activity>
         <activity android:name=".RegisterActivity" />
         <activity
             android:name=".ui.login.LoginActivity"
